# eathena

./: #upcoming-tasks.txt  .gitignore  CMakeLists.txt  CTestConfig.cmake  Changelog-Clownphobia  Changelog-Lua.txt  Changelog-Renewal.txt  Changelog-SVN.txt  Changelog-Stable.txt  Changelog-Trunk.txt  Changelog-eapp.txt  Changelog.txt  Makefile  Makefile.default  Makefile.in  Makefile.solaris  Makefile.txt  README.md  Readme-Lua.txt  Readme2.txt  Test.txt  about_clownphobia  changelog.txt  ciatest.txt  configure  configure.in  eApp-VC++7.1.sln  eApp-VC++8.0.sln  eAthena-10.sln  eAthena-17.sln  eAthena-6.dsw  eAthena-7.1.sln  eAthena-8.sln  eAthena-9.sln  eAthena.sln  eapp.sln  help.txt  map-server.sh  notice.txt  readme.html  (+5 more)
Dev/: GDB_reports.txt  Ideas_Suggestions.txt  LUA ideas.txt  Lua bugs.txt  Message to Celest.txt  Message to all devs.txt  TODO.txt  TODO_MOB_AI.txt  bugs.txt  db_files.txt  item_db.sxc  map.leaks  mmo_change_report.txt  mob_db.sxc  quotes.txt  resnametable.TXT  scripting.txt  trunk_vs_branch.txt
conf/: Changelog.txt  atcommand_athena.conf  battle_athena.conf  char_athena.conf  charcommand_athena.conf  help.txt  inter_athena.conf  log_athena.conf  login_athena.conf  map_athena.conf  maps_athena.conf  motd.txt  msg_athena.conf  packet_athena.conf  plugin_athena.conf  script_athena.conf  subnet_athena.conf
conf-tmpl/: Changelog.txt  GM_account.txt  addon_athena.conf  atcommand_athena.conf  battle_athena.conf  char_athena.conf  charcommand_athena.conf  command_athena.conf  grf-files.txt  help.txt  help2.txt  inter_athena.conf  log_athena.conf  login_athena.conf  map_athena.conf  maps_athena.conf  msg_athena.conf  packet_athena.conf  plugin_athena.conf  script_athena.conf  socket_athena.conf
db/: Changelog.txt  abra_db.txt  castle_db.txt  const.txt  create_arrow_db.txt  embryo_db.txt  exp.txt  exp2.txt  exp_guild.txt  exp_homun.txt  guild_skill_tree.txt  homun_db.txt  homun_skill_tree.txt  item_avail.txt  item_bluebox.txt  item_cardalbum.txt  item_db.txt  item_db.txt.bck  item_db2.txt  item_drop_rate.txt  item_findingore.txt  item_giftbox.txt  item_group_db.txt  item_noequip.txt  item_scroll.txt  item_trade.txt  item_violetbox.txt  job_db1.txt  job_db2.txt  map_index.txt  mercenary_db.txt  mob_avail.txt  mob_boss.txt  mob_branch.txt  mob_chat_db.txt  mob_db.txt  mob_db2.txt  mob_poring.txt  mob_race2_db.txt  mob_skill_db.txt  (+14 more)
devcpp5/: CIATest.txt
doc/: Script_Commands.txt  admin_packet.txt  client_packet.txt  commands.txt  effect_list.txt  help.txt  item.txt  item_bonus.txt  item_db.txt  mob_db_mode_list.txt  packet_struct_notation.txt  pccommand_list.txt  script_commands.txt  whisper_sys.txt
doxygen/: eapp.Doxyfile
eAthena/: eAthena.sln
eapp/: Changelog-SVN.txt  Changelog-eapp.txt  Makefile  eAthena.sln
httpd/: index.html
lib/: libmysql.lib  mysqlclient.lib  pcre.lib
login_src/: Makefile
lua/: README.txt
luanpc/: luanpcchangelog.txt  script_main.lua
npc/: .bash_profile  .emacs  Changelog.txt  a_tests.txt  gmhelper.txt  npcs_athena.conf  scripts_athena.conf  scripts_custom.conf  scripts_eaac.conf  scripts_eamonsters.conf  scripts_guild.conf  scripts_jmonsters.conf  scripts_jobs.conf  scripts_main.conf  scripts_mapflags.conf  scripts_monsters.conf  scripts_warps.conf
readme/: Thumbs.db  changelog.html  changelog.html.bak  commands.html  faq.html  features.html  gmcommands.html  npcfeatures.html  readme.css  setup.html  sites.html  style.css  support.html  testy.html
save-tmpl/: account.txt  accounts.rj
script/: Changelog-Scripts.txt  event_example.lua  gmcmd_example.lua  npc_example.lua  script_main.lua  scripts_warps.lua  test.lua
sql-files/: compatibility_12613.sql  convert_engine_innodb.sql  convert_engine_myisam.sql  convert_guild_tables.sql  convert_guild_tables2.sql  convert_mail.sql  db_tables.sql  guild_tables.sql  innodb_main.sql  item_db.sql  item_db2.sql  logs.sql  main-new.sql  main.sql  main_old.sql  mob_db.sql  mob_db2.sql  oA2eA-rc5.sql  update_logs.sql  update_logs2.sql  upgrade_0.5.2_main.sql  upgrade_charmerge.sql  upgrade_svn10762_db.sql  upgrade_svn10762_log.sql  upgrade_svn1125.sql  upgrade_svn12122.sql  upgrade_svn12163.sql  upgrade_svn12288_main.sql  upgrade_svn12524.sql  upgrade_svn12612.sql  upgrade_svn12716.sql  upgrade_svn12826.sql  upgrade_svn13032.sql  upgrade_svn13032_log.sql  upgrade_svn13393_charlog.sql  upgrade_svn13397_interlog.sql  upgrade_svn13515_rank.sql  upgrade_svn13946.sql  upgrade_svn14058.sql  upgrade_svn1499.sql  (+13 more)
src/: readme.txt
src/tool/: CMakeLists.txt  Makefile  Makefile.in  adduser.c  mapcache.c  txt-upgrade.c
src/txt-converter/char/: CMakeLists.txt  Makefile  char-converter.c
src/txt-converter/login/: CMakeLists.txt  Makefile  login-converter.c
tool/: stackdump
tools/: item_db.pl  mob_db.pl
vcproj-10/: char-server_sql.vcxproj  char-server_txt.vcxproj  common.vcxproj  common.vcxproj.filters  common_sql.vcxproj  login-server_sql.vcxproj  login-server_txt.vcxproj  map-server_sql.vcxproj  map-server_txt.vcxproj  mapcache.vcxproj  txt-converter-char.vcxproj  txt-converter-char.vcxproj.filters  txt-converter-login.vcxproj
vcproj-17/: char-server_sql.vcxproj  char-server_txt.vcxproj  common.vcxproj  common_sql.vcxproj  login-server_sql.vcxproj  login-server_txt.vcxproj  map-server_sql.vcxproj  map-server_txt.vcxproj  mapcache.vcxproj  txt-converter-char.vcxproj  txt-converter-login.vcxproj
vcproj-6/: char-server_sql.dsp  char-server_txt.dsp  common.dsp  common_sql.dsp  login-server_sql.dsp  login-server_txt.dsp  map-server_sql.dsp  map-server_txt.dsp  mapcache.dsp  plugin-console.dsp  plugin-pid.dsp  stable.ncb  stable.opt  txt-converter-char.dsp  txt-converter-login.dsp
vcproj-7.1/: basics.vcproj  char-server.vcproj  char-server_sql.vcproj  char-server_txt.vcproj  common.vcproj  common_sql.vcproj  login-server.vcproj  login-server_sql.vcproj  login-server_txt.vcproj  map-server.vcproj  map-server_sql.vcproj  map-server_txt.vcproj  mapcache.vcproj
vcproj-8.0/: basics.vcproj  char-server.vcproj  common.vcproj  login-server.vcproj  map-server.vcproj  scriptchk.vcproj  (+1 more)
(+1824 files in other folders)
